# Audio_extractor

./: LLM.txt  README.md
Audio extractor/: pyproject.toml
Audio extractor/src/app/: __init__.py  config.py  extract.py  models.py
Audio extractor/tests/: test_cli_integration.py  test_config_pipeline.py  test_formats.py
src/app/: cli.py  formats.py  pipeline.py  transcribe_gemini.py  transcribe_local.py  transcribe_openai.py
tests/: test_extract.py  test_pipeline_outputs.py
