[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-extractor-transcriber"
version = "0.1.0"
description = "Extract audio from MP4 and transcribe with local or cloud backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "faster-whisper>=1.0.3",
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
gemini = ["google-generativeai>=0.8.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
transcribe-video = "app.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
